# linkerd2-proxy

./: .clippy.toml  .codecov.yml  .dockerignore  .gdb_history  .gitattributes  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile_mayhem  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  bar-ns1-ca1-cert.pem  bar-ns1-ca1-key.pem  bar-ns1-ca1-secret.yml  bar-ns1-ca1.crt  bar-ns1-ca1.p8  bisect.sh  ca1-key.pem  ca1.pem  ca2-key.pem  ca2.pem  checksec.sh  controller-linkerd-ca1-cert.pem  controller-linkerd-ca1-key.pem  controller-linkerd-ca1-secret.yml  controller-linkerd-ca1.crt  controller-linkerd-ca1.p8  default.nix  deny.toml  flake.nix  foo-ns1-ca1-cert.pem  foo-ns1-ca1-key.pem  foo-ns1-ca1-secret.yml  foo-ns1-ca1.crt  foo-ns1-ca1.p8  (+14 more)
.cargo/: config.toml
.checksec/: amd64-gnu.json  amd64-musl.json  arm-musl.json  arm64-musl.json
.devcontainer/: Dockerfile  devcontainer.json  on-create.sh
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  fuzzers-list.sh  list-crates.sh
Mayhem/: addr.mayhemfile  dns.mayhemfile  fuzz_target_raw.mayhemfile  fuzz_target_structured.mayhemfile  http.mayhemfile  inbound.mayhemfile  tls.mayhemfile
benches/: Cargo.toml  cache.rs  record.rs
docs/: FUZZING.md
hyper-balance/: Cargo.toml
hyper-balance/src/: lib.rs
lib/fs-watch/: Cargo.toml
lib/fs-watch/src/: either_stream.rs  lib.rs
lib/linkerd2-app-core/: Cargo.toml
lib/linkerd2-app-core/src/: config.rs  lib.rs  logging.rs
lib/linkerd2-app-core/src/admin/: mod.rs
lib/linkerd2-app-core/src/telemetry/: process.rs
lib/linkerd2-app-inbound/: Cargo.toml
lib/linkerd2-app-inbound/src/: endpoint.rs  lib.rs  orig_proto_downgrade.rs  rewrite_loopback_addr.rs  set_client_id_on_req.rs  set_remote_ip_on_req.rs
lib/linkerd2-exp-backoff/: Cargo.toml
lib/linkerd2-exp-backoff/src/: lib.rs
lib/linkerd2-metrics/: Cargo.toml
lib/linkerd2-metrics/src/: histogram.rs  prom.rs
lib/linkerd2-opencensus/: Cargo.toml
lib/linkerd2-opencensus/src/: lib.rs  metrics.rs
lib/linkerd2-proxy-api-resolve/: Cargo.toml
lib/linkerd2-proxy-api-resolve/src/: lib.rs  metadata.rs  resolve.rs
lib/linkerd2-proxy-discover/: Cargo.toml
lib/linkerd2-proxy-discover/src/: buffer.rs  from_resolve.rs  lib.rs  make_endpoint.rs  service.rs
lib/linkerd2-proxy-fallback/: Cargo.toml
lib/linkerd2-proxy-fallback/src/: lib.rs
lib/linkerd2-proxy-http/: Cargo.toml
lib/linkerd2-proxy-http/src/: canonicalize.rs  h1.rs  strip_header.rs  upgrade.rs
lib/linkerd2-proxy-http/src/metrics/: handle_time.rs  report.rs  service.rs
lib/linkerd2-proxy-http/src/profiles/: mod.rs
lib/linkerd2-proxy-reconnect/: Cargo.toml
lib/linkerd2-proxy-reconnect/src/: layer.rs  lib.rs  service.rs
lib/linkerd2-proxy-resolve/: Cargo.toml
lib/linkerd2-proxy-resolve-buffer/: Cargo.toml
lib/linkerd2-proxy-resolve-buffer/src/: lib.rs
lib/linkerd2-proxy-resolve-dst-api/: Cargo.toml
lib/linkerd2-proxy-resolve-dst-api/src/: lib.rs
lib/linkerd2-proxy-resolve-dst-api/src/destination/: client.rs  mod.rs  resolution.rs
lib/linkerd2-proxy-resolve/src/: lib.rs  map_endpoint.rs  pb.rs  recover.rs  reject_targets.rs
lib/linkerd2-proxy-resolve/src/destination/: mod.rs  resolution.rs
lib/linkerd2-proxy-transport/: Cargo.toml
lib/linkerd2-proxy-transport/src/: connect.rs  lib.rs  prefixed.rs  source.rs
lib/linkerd2-proxy-transport/src/tls/: accept_tests.rs  client.rs  mod.rs
lib/linkerd2-proxy-transport/tests/: tls_accept.rs
lib/linkerd2-request-instrument/: Cargo.toml
lib/linkerd2-request-instrument/src/: lib.rs
lib/linkerd2-router/: Cargo.toml
lib/linkerd2-router/src/: error.rs  lib.rs
lib/linkerd2-stack/: Cargo.toml
lib/linkerd2-stack/src/: layer.rs  map_target.rs  per_make.rs  shared.rs
lib/linkerd2-trace-context/: Cargo.toml
lib/linkerd2-trace-context/src/: layer.rs  lib.rs  propagation.rs
lib/metrics/: Cargo.toml
lib/metrics/src/: counter.rs  gauge.rs  histogram.rs  latency.rs  lib.rs  prom.rs  scopes.rs  serve.rs
linkerd2-addr/: Cargo.toml
linkerd2-app-core/: Cargo.toml
linkerd2-app-inbound/: Cargo.toml
linkerd2-app-main/: Cargo.toml
linkerd2-app-main/src/: lib.rs
linkerd2-app-main/tests/: discovery.rs  identity.rs  shutdown.rs  telemetry.rs  transparency.rs
linkerd2-app-main/tests/support/: client.rs  mod.rs  proxy.rs  server.rs  tcp.rs
linkerd2-app-main/tests/support/data/: ca1-key.pem
linkerd2-app-main/tests/support/data/bar-ns1/: csr.der  key.p8
linkerd2-app-main/tests/support/data/foo-ns1/: ca1-cert.csr
linkerd2-app-outbound/: Cargo.toml
linkerd2-dns-name/: Cargo.toml
linkerd2-drain/: Cargo.toml
linkerd2-duplex/: Cargo.toml
linkerd2-identity/: Cargo.toml
linkerd2-opencensus/: Cargo.toml
linkerd2-proxy/: Cargo.toml
linkerd2-proxy-core/: Cargo.toml
linkerd2-proxy-resolve/: Cargo.toml
linkerd2-proxy/src/: main.rs  rt.rs
linkerd2-request-filter/: Cargo.toml
linkerd2-router/: Cargo.toml
linkerd2-signal/: Cargo.toml
linkerd2-stack/: Cargo.toml
linkerd2-task/: Cargo.toml
linkerd2-timeout/: Cargo.toml
metrics/: Cargo.toml
opencensus-proto/: Cargo.toml  README.md  build.rs
opencensus-proto/examples/: bootstrap.rs
opencensus-proto/opencensus/proto/trace/v1/: trace.proto
opencensus-proto/src/: lib.rs
opencensus-proto/tests/: bootstrap.rs
opentelemetry-proto/: Cargo.toml  README.md
opentelemetry-proto/examples/: bootstrap.rs
opentelemetry-proto/src/: lib.rs  proto.rs
opentelemetry-proto/src/transform/: common.rs  mod.rs  trace.rs
opentelemetry-proto/tests/: bootstrap.rs
practice/: emitter-56b5cb65c8-9mb9z.pod  emitter-elaborate.yaml  emitter.yaml  emitter_nfr.yaml  linkerd-env-patch.yaml  listener-nfr.yaml  listener.yaml  nfrenvconfigmap.yaml  routing.yaml
profiling/: .gitignore  Dockerfile-fortio  Dockerfile-iperf  Dockerfile-proxy  README.md  benchmark-cargo-test-fortio.sh  benchmark.sh  docker-compose.yml  (+13 more)
spiffe-proto/: Cargo.toml
spiffe-proto/examples/: bootstrap.rs
spiffe-proto/spiffe/proto/: workload.proto
spiffe-proto/src/: lib.rs
spiffe-proto/tests/: bootstrap.rs
(+1768 files in other folders)
