[workspace]
# Cargo should not unify feature flags across dev-dependencies and build
# dependencies. This will be the default behavior in Rust 2021.
resolver = "2"

members = [
    "hyper-balance",
    "linkerd/addr",
    "linkerd/app/admin",
    "linkerd/app/core",
    "linkerd/app/gateway",
    "linkerd/app/inbound",
    "linkerd/app/integration",
    "linkerd/app/outbound",
    "linkerd/app/test",
    "linkerd/app",
    "linkerd/conditional",
    "linkerd/distribute",
    "linkerd/detect",
    "linkerd/dns/name",
    "linkerd/dns",
    "linkerd/duplex",
    "linkerd/error",
    "linkerd/errno",
    "linkerd/error-respond",
    "linkerd/exp-backoff",
    "linkerd/http/access-log",
    "linkerd/http/body-compat",
    "linkerd/http/box",
    "linkerd/http/classify",
    "linkerd/http/executor",
    "linkerd/http/h2",
    "linkerd/http/insert",
    "linkerd/http/metrics",
    "linkerd/http/override-authority",
    "linkerd/http/prom",
    "linkerd/http/retain",
    "linkerd/http/retry",
    "linkerd/http/route",
    "linkerd/http/stream-timeouts",
    "linkerd/http/upgrade",
    "linkerd/http/variant",
    "linkerd/identity",
    "linkerd/idle-cache",
    "linkerd/io",
    "linkerd/meshtls",
    "linkerd/meshtls/boring",
    "linkerd/meshtls/rustls",
    "linkerd/meshtls/verifier",
    "linkerd/metrics",
    "linkerd/mock/http-body",
    "linkerd/opaq-route",
    "linkerd/opencensus",
    "linkerd/opentelemetry",
    "linkerd/pool",
    "linkerd/pool/mock",
    "linkerd/pool/p2c",
    "linkerd/proxy/api-resolve",
    "linkerd/proxy/balance",
    "linkerd/proxy/balance/gauge-endpoints",
    "linkerd/proxy/balance/queue",
    "linkerd/proxy/client-policy",
    "linkerd/proxy/core",
    "linkerd/proxy/dns-resolve",
    "linkerd/proxy/http",
    "linkerd/proxy/identity-client",
    "linkerd/proxy/spire-client",
    "linkerd/proxy/resolve",
    "linkerd/proxy/server-policy",
    "linkerd/proxy/tap",
    "linkerd/proxy/tcp",
    "linkerd/proxy/transport",
    "linkerd/reconnect",
    "linkerd/retry",
    "linkerd/router",
    "linkerd/service-profiles",
    "linkerd/signal",
    "linkerd/stack",
    "linkerd/stack/metrics",
    "linkerd/stack/tracing",
    "linkerd/system",
    "linkerd/tonic-stream",
    "linkerd/tonic-watch",
    "linkerd/tls",
    "linkerd/tls/route",
    "linkerd/tls/test-util",
    "linkerd/tracing",
    "linkerd/transport-header",
    "linkerd/transport-metrics",
    "linkerd2-proxy",
    "opencensus-proto",
    "opentelemetry-proto",
    "spiffe-proto",
    "tools",
]

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
bytes = { version = "1" }
drain = { version = "0.1", default-features = false }
h2 = { version = "0.4" }
http = { version = "1" }
http-body = { version = "1" }
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
prost = { version = "0.13" }
prost-build = { version = "0.13", default-features = false }
prost-types = { version = "0.13" }
tonic = { version = "0.12", default-features = false }
tonic-build = { version = "0.12", default-features = false }
tower = { version = "0.4", default-features = false }
tower-service = { version = "0.3" }
tower-test = { version = "0.4" }

[workspace.dependencies.http-body-util]
version = "0.1"
default-features = false
features = ["channel"]

[workspace.dependencies.tokio-rustls]
version = "0.26"
default-features = false
features = ["logging", "ring"]

# Temporarily patch `drain`. When linkerd/drain-rs#36 is released, this can
# be removed.
[patch.crates-io.drain]
git = "https://github.com/linkerd/drain-rs.git"
rev = "7678cbbf822c922fefa5c8c62070f52bea385fc9"
# https://github.com/linkerd/drain-rs/commit/7678cbbf822c922fefa5c8c62070f52bea385fc9

# Temporarily patch `http-body` and its sibling `http-body-util`, using a
# fork in the `linkerd` Github oranization. When hyperium/http-body#140 and
# hyperium/http-body#140 have been released, this can be removed.
[patch.crates-io.http-body]
git = "https://github.com/linkerd/http-body.git"
rev = "c86632ea5c869f28701b8de386e5c19b4388462b"
[patch.crates-io.http-body-util]
git = "https://github.com/linkerd/http-body.git"
rev = "c86632ea5c869f28701b8de386e5c19b4388462b"

[workspace.dependencies.linkerd2-proxy-api]
git = "https://github.com/linkerd/linkerd2-proxy-api.git"
rev = "981369a18918ce5570b2d49c329eca55ae831e87"
# https://github.com/linkerd/linkerd2-proxy-api/commit/981369a18918ce5570b2d49c329eca55ae831e87
