[workspace]
# Cargo should not unify feature flags across dev-dependencies and build
# dependencies. This will be the default behavior in Rust 2021.
resolver = "2"

members = [
    "hyper-balance",
    "linkerd/addr",
    "linkerd/app/admin",
    "linkerd/app/core",
    "linkerd/app/gateway",
    "linkerd/app/inbound",
    "linkerd/app/integration",
    "linkerd/app/outbound",
    "linkerd/app/test",
    "linkerd/app",
    "linkerd/conditional",
    "linkerd/distribute",
    "linkerd/detect",
    "linkerd/dns/name",
    "linkerd/dns",
    "linkerd/duplex",
    "linkerd/error",
    "linkerd/errno",
    "linkerd/error-respond",
    "linkerd/exp-backoff",
    "linkerd/http/access-log",
    "linkerd/http/body-compat",
    "linkerd/http/box",
    "linkerd/http/classify",
    "linkerd/http/executor",
    "linkerd/http/h2",
    "linkerd/http/insert",
    "linkerd/http/metrics",
    "linkerd/http/override-authority",
    "linkerd/http/prom",
    "linkerd/http/retain",
    "linkerd/http/retry",
    "linkerd/http/route",
    "linkerd/http/stream-timeouts",
    "linkerd/http/upgrade",
    "linkerd/http/variant",
    "linkerd/identity",
    "linkerd/idle-cache",
    "linkerd/io",
    "linkerd/meshtls",
    "linkerd/meshtls/boring",
    "linkerd/meshtls/rustls",
    "linkerd/meshtls/verifier",
    "linkerd/metrics",
    "linkerd/mock/http-body",
    "linkerd/opaq-route",
    "linkerd/opencensus",
    "linkerd/opentelemetry",
    "linkerd/pool",
    "linkerd/pool/mock",
    "linkerd/pool/p2c",
    "linkerd/proxy/api-resolve",
    "linkerd/proxy/balance",
    "linkerd/proxy/balance/gauge-endpoints",
    "linkerd/proxy/balance/queue",
    "linkerd/proxy/client-policy",
    "linkerd/proxy/core",
    "linkerd/proxy/dns-resolve",
    "linkerd/proxy/http",
    "linkerd/proxy/identity-client",
    "linkerd/proxy/spire-client",
    "linkerd/proxy/resolve",
    "linkerd/proxy/server-policy",
    "linkerd/proxy/tap",
    "linkerd/proxy/tcp",
    "linkerd/proxy/transport",
    "linkerd/reconnect",
    "linkerd/retry",
    "linkerd/router",
    "linkerd/service-profiles",
    "linkerd/signal",
    "linkerd/stack",
    "linkerd/stack/metrics",
    "linkerd/stack/tracing",
    "linkerd/system",
    "linkerd/tonic-stream",
    "linkerd/tonic-watch",
    "linkerd/tls",
    "linkerd/tls/route",
    "linkerd/tls/test-util",
    "linkerd/tracing",
    "linkerd/transport-header",
    "linkerd/transport-metrics",
    "linkerd2-proxy",
    "opencensus-proto",
    "opentelemetry-proto",
    "spiffe-proto",
    "tools",
]

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
bytes = { version = "1" }
h2 = { version = "0.3" }
http = { version = "0.2" }
http-body = { version = "0.4" }
hyper = { version = "0.14.32", default-features = false }
prost = { version = "0.12" }
prost-build = { version = "0.12", default-features = false }
prost-types = { version = "0.12" }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
    "logging",
] }
tonic = { version = "0.10", default-features = false }
tonic-build = { version = "0.10", default-features = false }
tower = { version = "0.4.13", default-features = false }
tower-service = { version = "0.3" }

[workspace.dependencies.linkerd2-proxy-api]
version = "0.15.0"
# git = "https://github.com/linkerd/linkerd2-proxy-api.git"
# branch = "main"
