[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
linkerd2-cache = { path = "../linkerd/cache" }
linkerd2-error = { path = "../linkerd/error" }
linkerd2-lock = { path = "../linkerd/lock" }
linkerd2-stack = { path = "../linkerd/stack" }
bencher = "0.1.5"
tower = "0.1"
futures = "0.1"


[[bench]]
name = "cache"
path = "cache.rs"
harness = false

