[package]
name = "hyper-balance"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
futures = { version = "0.3", default-features = false }
http = "1.1"
hyper = "1.5"
pin-project = "1"
tower = { version = "0.4", default-features = false, features = ["load"] }
tokio = { version = "1", features = ["macros"] }

[dev-dependencies]
tokio-test = "0.4"
