[package]
name = "linkerd2-app-main"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

[features]
default = ["flaky_tests"]
# Disable to skip certain tests that should not be run on CI.
flaky_tests = []


[dependencies]
futures = "0.1"
linkerd2-app-core = { path = "../linkerd2-app-core" }
linkerd2-app-inbound = { path = "../linkerd2-app-inbound" }
linkerd2-app-outbound = { path = "../linkerd2-app-outbound" }
linkerd2-signal = { path = "../linkerd2-signal" }
opencensus-proto       = { path = "../opencensus-proto" }
tokio = "0.1.14"
tracing            = "0.1.9"

[dev-dependencies]
bytes = "0.4"
flate2 = { version = "1.0.1", default-features = false, features = ["rust_backend"] }
h2 = "0.1"
http = "0.1"
http-body = "0.1"
hyper = "0.12"
linkerd2-metrics = { path = "../linkerd2-metrics", features = ["test_util"] }
linkerd2-task    = { path = "../linkerd2-task", features = ["test_util"] }
linkerd2-proxy-api = { git = "https://github.com/linkerd/linkerd2-proxy-api", features = ["arbitrary"], tag = "v0.1.10" }
regex = "0.1"
net2 = "0.2"
quickcheck = { version = "0.8", default-features = false }
ring = "0.16"
rustls = "0.16"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tokio-io = "0.1.6"
tokio-current-thread = "0.1.4"
tokio-rustls = "0.10"
tower = "0.1"
tower-grpc = { version = "0.1", default-features = false, features = ["protobuf"] }
webpki = "0.21"
