[package]
name = "linkerd2-opencensus"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

[dependencies]
futures = "0.1"
linkerd2-error = { path = "../linkerd2-error" }
linkerd2-metrics = { path = "../linkerd2-metrics" }
opencensus-proto = { path = "../opencensus-proto" }
tokio = "0.1"
tower-grpc = { version = "0.1", default-features = false, features = ["protobuf"] }
tracing = "0.1"
