[package]
name = "linkerd2-proxy"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
description = "The main proxy executable"

[features]
default = ["meshtls-rustls-ring"]
meshtls-boring = ["linkerd-meshtls/boring"]
meshtls-boring-fips = ["linkerd-meshtls/boring-fips"]
meshtls-rustls-aws-lc = ["linkerd-meshtls/rustls-aws-lc"]
meshtls-rustls-aws-lc-fips = ["linkerd-meshtls/rustls-aws-lc-fips"]
meshtls-rustls-ring = ["linkerd-meshtls/rustls-ring"]
log-streaming = ["linkerd-app/log-streaming"]
pprof = ["linkerd-app/pprof"]

[dependencies]
futures = { version = "0.3", default-features = false }
kubert-prometheus-tokio = { version = "0.2.0", features = ["rt"] }
linkerd-app = { path = "../linkerd/app" }
linkerd-metrics = { path = "../linkerd/metrics" }
# We don't actually use code from this crate in `main`; it's here only so we can
# control its feature flags.
linkerd-meshtls = { path = "../linkerd/meshtls" }
linkerd-signal = { path = "../linkerd/signal" }
num_cpus = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "net"] }
tracing = { workspace = true }

[target.x86_64-unknown-linux-gnu.dependencies]
jemallocator = { version = "0.5" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
