[package]
name = "linkerd2-proxy"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
description = "The main proxy executable"

[features]
default = []
meshtls-rustls-aws-lc-fips = ["linkerd-meshtls/fips"]
log-streaming = ["linkerd-app/log-streaming"]
pprof = ["linkerd-app/pprof"]
# From https://github.com/polarsignals/rust-jemalloc-pprof/blob/bcf1ad7f7ad3ec8e71098f4d5a9ce55905c7a602/README.md#usage
jemalloc-profiling = [
    "tikv-jemallocator/profiling",
    "tikv-jemallocator/unprefixed_malloc_on_supported_platforms",
]

[dependencies]
futures = { version = "0.3", default-features = false }
kubert-prometheus-tokio = { version = "0.2.0", features = ["rt"] }
linkerd-app = { path = "../linkerd/app" }
linkerd-metrics = { path = "../linkerd/metrics" }
# We don't actually use code from this crate in `main`; it's here only so we can
# control its feature flags.
linkerd-meshtls = { path = "../linkerd/meshtls" }
linkerd-rustls = { path = "../linkerd/rustls" }
linkerd-signal = { path = "../linkerd/signal" }
num_cpus = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "net"] }
tracing = { workspace = true }

[target.x86_64-unknown-linux-gnu.dependencies]
tikv-jemallocator = "0.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
