[package]
name = "opencensus-proto"
version = "0.1.0"
authors = ["The OpenCensus Authors"]
license = "Apache-2.0"
edition = "2021"
publish = false
description = """
gRPC bindings for OpenCensus.

Vendored from https://github.com/census-instrumentation/opencensus-proto/.
"""

[dependencies]
bytes = "1"
prost = "0.10"
prost-types = "0.11"

[dependencies.tonic]
version = "0.7"
default-features = false
features = ["prost", "codegen"]

[dev-dependencies.tonic-build]
version = "0.7"
default-features = false
features = ["prost"]

[lib]
doctest = false
