[package]
name = "opencensus-proto"
version = { workspace = true }
authors = ["The OpenCensus Authors"]
license = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
description = """
gRPC bindings for OpenCensus.

Vendored from https://github.com/census-instrumentation/opencensus-proto/.
"""

[dependencies]
bytes = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[dependencies.tonic]
workspace = true
default-features = false
features = ["prost", "codegen"]

[dev-dependencies.tonic-build]
workspace = true
default-features = false
features = ["prost"]

[lib]
doctest = false
