[package]
name = "opentelemetry-proto"
version = "0.1.0"
authors = ["The OpenTelemetry Authors"]
license = "Apache-2.0"
edition = "2021"
publish = false
description = """
gRPC bindings for OpenTelemetry.

Vendored from https://github.com/open-telemetry/opentelemetry-rust/.
"""

[dependencies]
tonic = { workspace = true, features = ["codegen", "prost", "transport"] }
prost = { workspace = true }
opentelemetry = { version = "0.27", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.27", default-features = false, features = ["trace"] }

[dev-dependencies]
opentelemetry = { version = "0.27", default-features = false, features = ["trace", "testing"] }
tonic-build = { workspace = true, default-features = false, features = ["prost"] }

[lib]
doctest = false
