[package]
name = "opentelemetry-proto"
version = { workspace = true }
authors = ["The OpenTelemetry Authors"]
license = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
description = """
gRPC bindings for OpenTelemetry.

Vendored from https://github.com/open-telemetry/opentelemetry-rust/.
"""

[dependencies]
tonic = { workspace = true, features = ["codegen", "prost", "transport"] }
prost = { workspace = true }
opentelemetry = { version = "0.28", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.28", default-features = false, features = ["trace"] }

[dev-dependencies]
opentelemetry = { version = "0.28", default-features = false, features = ["trace", "testing"] }
tonic-build = { workspace = true, default-features = false, features = ["prost"] }

[lib]
doctest = false
