[package]
name = "spiffe-proto"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
prost = { workspace = true }

[dependencies.tonic]
workspace = true
default-features = false
features = ["prost", "codegen"]

[dev-dependencies.tonic-build]
workspace = true
default-features = false
features = ["prost"]

[lib]
doctest = false
