[package]
name = "spiffe-proto"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
prost = { workspace = true }
tonic-prost = { workspace = true }

[dependencies.tonic]
workspace = true
default-features = false
features = ["codegen"]

[dev-dependencies.tonic-prost-build]
workspace = true
default-features = false

[lib]
doctest = false
