[package]
name = "linkerd2-app-core"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

[dependencies]
bytes = "0.4"
http = "0.1"
httparse = "1.2"
hyper = "0.12"
futures = "0.1"
indexmap = "1.0"
ipnet = "1.0"
linkerd2-addr = { path = "../linkerd2-addr" }
linkerd2-conditional = { path = "../linkerd2-conditional" }
linkerd2-dns-name = { path = "../linkerd2-dns-name" }
linkerd2-drain = { path = "../linkerd2-drain" }
linkerd2-duplex = { path = "../linkerd2-duplex" }
linkerd2-error = { path = "../linkerd2-error" }
linkerd2-exp-backoff = { path = "../linkerd2-exp-backoff" }
linkerd2-fallback = { path = "../linkerd2-fallback" }
linkerd2-identity = { path = "../linkerd2-identity" }
linkerd2-metrics = { path = "../linkerd2-metrics" }
linkerd2-opencensus = { path = "../linkerd2-opencensus" }
linkerd2-proxy-core = { path = "../linkerd2-proxy-core" }
linkerd2-proxy-api = { git = "https://github.com/linkerd/linkerd2-proxy-api", tag = "v0.1.10" }
linkerd2-proxy-api-resolve = { path = "../linkerd2-proxy-api-resolve" }
linkerd2-proxy-discover = { path = "../linkerd2-proxy-discover" }
linkerd2-proxy-dns = { path = "../linkerd2-proxy-dns" }
linkerd2-proxy-http = { path = "../linkerd2-proxy-http" }
linkerd2-proxy-resolve = { path = "../linkerd2-proxy-resolve" }
linkerd2-proxy-transport = { path = "../linkerd2-proxy-transport" }
linkerd2-reconnect = { path = "../linkerd2-reconnect" }
linkerd2-request-filter = { path = "../linkerd2-request-filter" }
linkerd2-router = { path = "../linkerd2-router" }
linkerd2-signal = { path = "../linkerd2-signal" }
linkerd2-stack = { path = "../linkerd2-stack" }
linkerd2-task = { path = "../linkerd2-task" }
linkerd2-timeout = { path = "../linkerd2-timeout" }
linkerd2-trace-context = { path = "../linkerd2-trace-context" }
opencensus-proto = { path = "../opencensus-proto" }
rand = "0.6"
regex = "1.0.0"
tokio = "0.1.14"
tokio-timer = "0.2"
tower = "0.1"
tower-balance = { git = "https://github.com/tower-rs/tower" }
tower-load = { git = "https://github.com/tower-rs/tower" }
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-spawn-ready = { git = "https://github.com/tower-rs/tower" }
tower-grpc = { version = "0.1", default-features = false, features = ["protobuf"] }
tracing = "0.1.9"
tracing-futures = "0.0.1-alpha.1"
tracing-log = "0.1"

[dependencies.tracing-subscriber]
version = "0.1.4"
# we don't need ANSI colors or `chrono` time formatting
default-features = false
features = ["env-filter", "fmt", "smallvec", "tracing-log"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
procinfo = "0.4.2"

[dev-dependencies]
linkerd2-proxy-api = { git = "https://github.com/linkerd/linkerd2-proxy-api", features = ["arbitrary"], tag = "v0.1.10" }
prost-types = "0.5.0"
quickcheck = { version = "0.8", default-features = false }
#net2 = "0.2"
# linkerd2-metrics = { path = "./lib/linkerd2-metrics", features = ["test_util"] }
# linkerd2-task    = { path = "lib/linkerd2-task", features = ["test_util"] }
# flate2 = { version = "1.0.1", default-features = false, features = ["rust_backend"] }
# # `tokio-io` is needed for TCP tests, because `tokio::io` doesn't re-export
# # the `read` function.
# tokio-io = "0.1.6"
# tokio-current-thread = "0.1.4"

