[package]
name = "linkerd2-app-inbound"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

[dependencies]
bytes = "0.4"
http = "0.1"
futures = "0.1"
indexmap = "1.0"
linkerd2-addr = { path = "../linkerd2-addr" }
linkerd2-app-core = { path = "../linkerd2-app-core" }
linkerd2-conditional = { path = "../linkerd2-conditional" }
linkerd2-drain = { path = "../linkerd2-drain" }
linkerd2-proxy-core = { path = "../linkerd2-proxy-core" }
linkerd2-proxy-http = { path = "../linkerd2-proxy-http" }
linkerd2-proxy-transport = { path = "../linkerd2-proxy-transport" }
linkerd2-reconnect = { path = "../linkerd2-reconnect" }
linkerd2-stack = { path = "../linkerd2-stack" }
linkerd2-trace-context = { path = "../linkerd2-trace-context" }
opencensus-proto = { path = "../opencensus-proto" }
tokio = "0.1.14"
tower = "0.1"
tower-grpc = { version = "0.1", default-features = false, features = ["protobuf"] }
tracing = "0.1.9"

[dev-dependencies]
quickcheck = { version = "0.8", default-features = false }
#
