[package]
name = "linkerd2-exp-backoff"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false


[dependencies]
futures = "0.1"
rand = "0.6.3"
tokio-timer = "0.2.6"

[dev-dependencies]
quickcheck = { version = "0.8", default-features = false }
