[package]
name = "linkerd2-metrics"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

[features]
default = []
test_util = []

[dependencies]
deflate = { version = "0.7.18", features = ["gzip"] }
futures = "0.1"
http = "0.1"
hyper = "0.12.3"
indexmap = "1.0"
tracing = "0.1.2"

[dev-dependencies]
quickcheck = { version = "0.8", default-features = false }
