[package]
name = "linkerd2-opencensus"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"

[dependencies]
futures = "0.1"
opencensus-proto = { path = "../opencensus-proto" }
tokio = "0.1"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc", default-features = false, features = ["protobuf"] }
tracing = "0.1"
