[package]
name = "linkerd2-proxy-api-resolve"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

[dependencies]
futures = "0.1"
linkerd2-identity = { path = "../linkerd2-identity" }
linkerd2-proxy-api = { git = "https://github.com/linkerd/linkerd2-proxy-api", rev = "4b788dd3d82564f0600a5904367e6d37827bb930" }
linkerd2-proxy-core = { path = "../linkerd2-proxy-core" }
prost = "0.5.0"
tower-grpc = { version = "0.1", default-features = false, features = ["protobuf"] }
indexmap = "1.0"
tokio-sync = "0.1"
tower = "0.1"
tracing = "0.1"
