[package]
name = "linkerd2-proxy-fallback"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4"
futures = "0.1"
http = "0.1"
hyper = "0.12"
linkerd2-proxy-core = { path = "../linkerd2-proxy-core" }
tower= "0.1"
tracing = "0.1"
