
[package]
name = "linkerd2-proxy-http"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

[dependencies]
bytes = "0.4"
futures = "0.1"
h2 = "0.1"
http = "0.1"
http-body = "0.1"
hyper = "0.12.3"
hyper-balance = { path = "../hyper-balance" }
indexmap = "1.0"
linkerd2-addr = { path = "../linkerd2-addr" }
linkerd2-drain = { path = "../linkerd2-drain" }
linkerd2-duplex = { path = "../linkerd2-duplex" }
linkerd2-error = { path = "../linkerd2-error" }
linkerd2-fallback = { path = "../linkerd2-fallback" }
linkerd2-identity = { path = "../linkerd2-identity" }
linkerd2-router = { path = "../linkerd2-router" }
linkerd2-metrics = { path = "../linkerd2-metrics" }
linkerd2-stack = { path = "../linkerd2-stack" }
linkerd2-task = { path = "../linkerd2-task" }
linkerd2-timeout = { path = "../linkerd2-timeout" }
linkerd2-proxy-dns = { path = "../linkerd2-proxy-dns" }
linkerd2-proxy-transport = { path = "../linkerd2-proxy-transport" }
rand = "0.6.3"
regex = "1.0.0"
tokio = "0.1"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tokio-timer = "0.2"   # for tokio_timer::clock
tower = "0.1"
tower-balance = { git = "https://github.com/tower-rs/tower" }
tower-discover = "0.1"
tower-load = { git = "https://github.com/tower-rs/tower" }
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-spawn-ready = { git = "https://github.com/tower-rs/tower" }
tower-grpc = { version = "0.1", default-features = false, features = ["protobuf"] }
tower-util = "0.1"
tracing = "0.1.9"
tracing-futures = "0.0.1-alpha.1"
try-lock = "0.2"
