[package]
name = "linkerd2-proxy-reconnect"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

[dependencies]
linkerd2-proxy-core = { path = "../linkerd2-proxy-core" }
linkerd2-never = { path = "../linkerd2-never" }
futures = "0.1"
tokio = "0.1"
tower = "0.1"
tracing = "0.1"
