[package]
name = "linkerd2-proxy-resolve-buffer"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

[dependencies]
futures = "0.1"
linkerd2-never = { path = "../linkerd2-never" }
linkerd2-proxy-core = { path = "../linkerd2-proxy-core" }
linkerd2-task = { path = "../linkerd2-task" }
tokio = "0.1"
tower = "0.1"
tracing = "0.1"
tracing-futures = "0.0.1-alpha.1"
