[package]
name = "linkerd2-proxy-resolve"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

[dependencies]
futures = "0.1"
linkerd2-error = { path = "../linkerd2-error" }
linkerd2-proxy-core = { path = "../linkerd2-proxy-core" }
indexmap = "1.0"
tokio = "0.1"
tower = "0.1"
tracing = "0.1"
